Use staging search index

--- a/layouts/partials/search-modal.html
+++ b/layouts/partials/search-modal.html
@@ -159,7 +159,7 @@
         console.log(error)
       }
   
-      search(`https://search-service.redislabs.com/search?q=${searchTerm}&site=https://redis.io`)
+      search(`https://search-service.redislabs.com/search?q=${searchTerm}&site=https://kyle-buildout--redis-io.netlify.app`)
         .then(displayData)
       	.catch(displayError)
     }
