Improve category display

--- a/layouts/partials/search-modal.html
+++ b/layouts/partials/search-modal.html
@@ -101,7 +101,18 @@
   
             return a
           }, [])
-  
+
+        // If there's not natural section title, use the hierarchy
+        const constructSectionTitle = (record) => {
+          if (record.section_title) {
+            return record.section_title
+          } else if (record.hierarchy && record.hierarchy.length > 2) {
+            return record.hierarchy.slice(-2).join(' > ')
+          } else {
+            return null
+          }
+        }
+
         // Merge the data into a single list using the categories list as index
         const mergeData = (data, categories) =>
           categories.map((category) => {
@@ -111,7 +122,7 @@
             data.forEach((record) => {
               if (record.hierarchy[0] === category) {
                 obj[record.title] = {
-                  path: record.section_title,
+                  path: constructSectionTitle(record),
                   url: record.url,
                 }
               }
