--- a/layouts/partials/search-modal.html
+++ b/layouts/partials/search-modal.html
@@ -102,7 +102,7 @@
             return a
           }, [])
 
-        // If there's not natural section title, use the hierarchy
+        // If there's no natural section title, use the hierarchy
         const constructSectionTitle = (record) => {
           if (record.section_title) {
             return record.section_title
