integrating cli into new design

--- a/layouts/commands/single.html
+++ b/layouts/commands/single.html
@@ -1,3 +1,8 @@
+{{ define "head" }}
+  <script src="/js/cli.js" defer></script>
+  <link rel="stylesheet" href="/css/cli.css" defer></script>
+{{ end }}
+
 {{ define "main" }}
   <main class="docs w-full max-w-[85rem] mx-auto px-4 sm:px-6 lg:px-8 md:flex gap-16 relative">
     {{ partial "docs-nav.html" . }}
