--- a/layouts/shortcodes/redis-cli.html
+++ b/layouts/shortcodes/redis-cli.html
@@ -1,3 +1,8 @@
-<form class="redis-cli" dbid="">
+<div class="bg-slate-900 border-b border-slate-700 rounded-t-xl p-4 w-full flex space-x-2">
+  <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
+  <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
+  <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
+</div>  
+<form class="redis-cli overflow-y-auto max-h-80">
   {{- .Inner -}}
 </form>
