--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,5 +1,6 @@
 {{ define "head" }}
   <script src="/js/cli.js" defer></script>
+  <link rel="stylesheet" href="/css/cli.css" defer></script>
 {{ end }}
 
 {{ define "main" }}
@@ -15,18 +16,21 @@
           <a href="/docs/" class="button-xl button-outline ml-2">Read the docs</a>
         </div>
         <div class="relative pt-7 pr-7 -mr-7 bg-no-repeat bg-right-top" style="background-image: url('/images/triangle-lines.svg')">
-          <div class="bg-slate-800 rounded-xl shadow-lg shadow-slate-900/10">
+          <div class="bg-slate-800 rounded-xl shadow-lg shadow-slate-900/10 h-80">
             <div class="bg-slate-900 border-b border-slate-700 rounded-t-xl p-4 w-full flex space-x-2">
               <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
               <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
               <div class="w-3 h-3 border border-slate-700 rounded-full"></div>
-            </div>
-            <form class="redis-cli"></form>
-            {{/*  <img
-              class="cli mix-blend-screen p-5"
-              alt="terminal gif"
-              src="/images/redis.io.terminal.gif"
-            />  */}}
+            </div>            
+            <form class="redis-cli h-72 overflow-y-scroll" typewriter>
+              <pre tabindex="0">
+                PING
+                HSET db:1 name redis type NOSQL version 7.0.4
+                SET e 2.71
+                INCRBYFLOAT e 0.43
+                RENAME e pi
+              </pre>
+            </form>
           </div>
         </div>
       </div>
